examples/__outputs__/30_gql/gql_gql-document-node_gql-typed_gql-document-node-typed__gql-document-node-typed.output.test.txt
/Users/jasonkuhrt/projects/jasonkuhrt/graffle/examples/node_modules/.pnpm/graffle@file+.._@opentelemetry+api@1.9.0_graphql@16.10.0/node_modules/graffle/src/lib/anyware/run/runPipeline.ts:117
          return new ContextualError(message, { hookName: signal.hookName, source: signal.source }, signal.error)
                 ^


ContextualError: There was an error in the core implementation of hook "exchange".
    at runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at async <anonymous> (/some/path/to/runner.ts:XX:XX)
    at async Module.run (/some/path/to/run.ts:XX:XX)
    at async sendRequest (/some/path/to/send.ts:XX:XX)
    at async <anonymous> (/some/path/to/gql_gql-document-node_gql-typed_gql-document-node-typed__gql-document-node-typed.ts:XX:XX) {
  cause: TypeError: fetch failed
      at node:internal/deps/undici/undici:13510:13
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async Object.run (/some/path/to/TransportHttp.ts:XX:XX)
      at async runStep (/some/path/to/runStep.ts:XX:XX) {
    [cause]: AggregateError [ECONNREFUSED]: 
        at internalConnectMultiple (node:net:1134:18)
        at afterConnectMultiple (node:net:1715:7) {
      code: 'ECONNREFUSED',
      [errors]: [
        Error: connect ECONNREFUSED ::1:3000
            at createConnectionError (node:net:1678:14)
            at afterConnectMultiple (node:net:1708:16) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '::1',
          port: 3000
        },
        Error: connect ECONNREFUSED 127.0.0.1:3000
            at createConnectionError (node:net:1678:14)
            at afterConnectMultiple (node:net:1708:16) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '127.0.0.1',
          port: 3000
        }
      ]
    }
  },
  context: { hookName: 'exchange', source: 'implementation' }
}

Node.js vXX.XX.XX